<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Locrem</string>
    <string name="search_description">Shows location-aware reminder entries</string>
    <string name="add_entry">Add Entry</string>
    <string name="menu_delete">Delete</string>
    <string name="delay_to_future">Delay to Future</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_location">Add Address</string>
    <string name="address">Address</string>
    <string name="tag">Tag</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="show_all">Show All</string>
    <string name="center_to_current">Current Location</string>
    <string name="switch_map_mode">Switch Mode</string>
    <string name="settings">Settings</string>
    <string name="proximity">Distance</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibration">Vibration</string>
    <string name="vibrate_on_remind">Vibrate on reminder alert?</string>
    <string name="distance_in_m">%s m</string>
    <string name="distance_in_km">%s km</string>
    <string name="walk">walk</string>
    <string name="time_in_sec">%s secs</string>
    <string name="time_in_min">%s mins</string>
    <string name="title_error">Error</string>
    <string name="title_alert">Alert</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="address_not_found">Address cannot be located</string>
    <string name="address_change">Change location to %s?</string>
    <string name="finding_location">Finding location</string>
    <string name="finding_current_location">Finding current location</string>
    <string name="current_location_not_found">
        Unable to find current location
    </string>
    <string name="address_invalid">
        Please enter a valid address and make sure it is marked on the map
    </string>
    <string name="incomplete_form">
        Please make sure you have entered a valid address and note
    </string>

    <string name="deletion_failed">Failed to delete entry %s</string>
    <string name="deletion_succeeded">Successfully deleted entry %s</string>
    <string name="save_succeeded">Successfully saved entry "%s"</string>
    <string name="save_settings_failed">Failed to save settings</string>
</resources>
