<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="settings_screen">
    <ListPreference android:key="settings_range"
                    android:title="@string/proximity"
                    android:entries="@array/settings_proximity_list"
                    android:entryValues="@array/settings_proximityvalues_list"
                    android:defaultValue="500" />
    <RingtonePreference android:key="settings_ringtone"
                        android:title="@string/ringtone"
                        android:ringtoneType="notification"
                        android:defaultValue="content://settings/system/notification_sound"
                        android:showDefault="true" />
    <CheckBoxPreference android:key="settings_vibration"
                        android:title="@string/vibration"
                        android:summary="@string/vibrate_on_remind"
                        android:defaultValue="true"/>
</PreferenceScreen>
