<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="fill_parent"
              android:layout_height="fill_parent">

  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/location" />
    <EditText android:id="@+id/location"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"/>
  </LinearLayout>

  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note" />
  <EditText android:id="@+id/note"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:gravity="top" />

  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <Button android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
  </LinearLayout>

</LinearLayout>
